[gd_scene load_steps=8 format=3 uid="uid://sva5ljtl6xh0"]

[ext_resource type="Script" path="res://scripts/bug_report.gd" id="1_sjb6p"]
[ext_resource type="Texture2D" uid="uid://kun25ew8op75" path="res://assets/images/newTitle.png" id="2_1l348"]
[ext_resource type="Texture2D" uid="uid://chrkm8olrd77n" path="res://assets/images/UI/contextBox.png" id="3_178d8"]
[ext_resource type="ButtonGroup" uid="uid://jv5156kgkl3j" path="res://scenes/bug_or_suggestion.tres" id="4_mb0co"]
[ext_resource type="AudioStream" uid="uid://biahidwgnemv1" path="res://assets/sfx/Selection.wav" id="5_f0ela"]
[ext_resource type="Theme" uid="uid://dco7pt1y644mi" path="res://themes/ConfirmPopup.tres" id="6_nmofd"]
[ext_resource type="PackedScene" uid="uid://8yy25gv2xxsf" path="res://scenes/options_menu_button.tscn" id="7_ogjoj"]

[node name="BugReport" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjb6p")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.309804)
position = Vector2(966.5, 543.5)
texture = ExtResource("2_1l348")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(927, 523)
scale = Vector2(2.16286, 2.16286)
texture = ExtResource("3_178d8")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 87.0
offset_right = 1428.0
offset_bottom = 183.0
theme_override_colors/font_outline_color = Color(0.988281, 0.961258, 0.961258, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/normal_font_size = 65
bbcode_enabled = true
text = "[center]Feedback and Bug Submission"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 294.0
offset_right = 1420.0
offset_bottom = 854.0
placeholder_text = "Enter Feedback or Bug report here. Please be as detailed as possible."

[node name="Submit" type="Button" parent="."]
layout_mode = 0
offset_left = 673.0
offset_top = 934.0
offset_right = 743.0
offset_bottom = 974.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Submit"

[node name="Return" type="Button" parent="."]
layout_mode = 0
offset_left = 981.0
offset_top = 932.0
offset_right = 1057.0
offset_bottom = 972.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Return"

[node name="Bug" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 715.0
offset_top = 227.0
offset_right = 800.0
offset_bottom = 262.0
focus_mode = 0
button_group = ExtResource("4_mb0co")
text = "Bug"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 992.0
offset_top = 226.0
offset_right = 1164.0
offset_bottom = 261.0
focus_mode = 0
button_group = ExtResource("4_mb0co")
text = "Suggestion"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="accept" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_f0ela")

[node name="AcceptBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 0.811765)

[node name="AcceptDialog" type="AcceptDialog" parent="AcceptBackground"]
title = ""
position = Vector2i(760, 460)
size = Vector2i(305, 124)
theme = ExtResource("6_nmofd")
dialog_text = "    Feedback Submitted!"

[node name="OptionsMenuButton" parent="." instance=ExtResource("7_ogjoj")]
layout_mode = 0
offset_left = 1852.0
offset_top = 7.0
offset_right = 1972.0
offset_bottom = 127.0

[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Bug" to="." method="_on_bug_pressed"]
[connection signal="pressed" from="CheckBox" to="." method="_on_check_box_pressed"]
[connection signal="confirmed" from="AcceptBackground/AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
